--- a/package.json
+++ b/package.json
@@ -9,13 +9,20 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@sendgrid/mail": "^8.1.3",
+    "aos": "^2.3.4",
+    "mongodb": "^6.9.0",
     "next": "14.2.4",
     "react": "^18",
     "react-dom": "^18",
+    "react-google-recaptcha": "^3.1.0",
+    "react-google-recaptcha-v3": "^1.10.1",
+    "recaptcha-v3": "^1.11.3",
     "tailwindcss-animate": "^1.0.7",
     "xmlhttprequest": "^1.8.0"
   },
   "devDependencies": {
+    "@types/aos": "^3.0.7",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
