--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@sendgrid/mail": "^8.1.3",
+    "@types/mongodb": "^4.0.7",
     "aos": "^2.3.4",
     "mongodb": "^6.9.0",
     "next": "14.2.4",
